--- a/changelog.txt
+++ b/changelog.txt
@@ -1,4 +1,9 @@
 ---------------------------------------------------------------------------------------------------
+Version: 0.69.2
+Date: ????
+  Changes:
+    - Blacklisted planet OMNI following reports about it on discord.
+---------------------------------------------------------------------------------------------------
 Version: 0.69.1
 Date: ????
   Changes:
