--- a/changelog.txt
+++ b/changelog.txt
@@ -1,6 +1,6 @@
 ---------------------------------------------------------------------------------------------------
 Version: 0.69.2
-Date: ????
+Date: 2025-09-26
   Changes:
     - Blacklisted planet OMNI following reports about it on discord.
 ---------------------------------------------------------------------------------------------------
