preparing release of version 0.69.3

--- a/changelog.txt
+++ b/changelog.txt
@@ -1,6 +1,6 @@
 ---------------------------------------------------------------------------------------------------
 Version: 0.69.3
-Date: ????
+Date: 2025-10-24
   Changes:
     - Blacklisted janus-reshifted, which is a fork of Janus.
 ---------------------------------------------------------------------------------------------------
