--- a/changelog.txt
+++ b/changelog.txt
@@ -1,4 +1,8 @@
 ---------------------------------------------------------------------------------------------------
+Version: 0.69.4
+Date: ????
+  Changes:
+---------------------------------------------------------------------------------------------------
 Version: 0.69.3
 Date: 2025-10-24
   Changes:
