--- a/changelog.txt
+++ b/changelog.txt
@@ -1,6 +1,6 @@
 ---------------------------------------------------------------------------------------------------
 Version: 0.69.5
-Date: ????
+Date: 2025-12-11
   Changes:
     - Blacklisted planet Vicrox fork.
     - Unblacklisted Terra palus, following it being un-abandoned.
